feat(root-service): optimize export logic and add new constants
Refactor the RootService class to enhance the export functionality. This change introduces
new constants for improved file naming and adds an InputStream approach for export data handling.
The saveExportFile method has been updated to support custom export storage locations.

BREAKING CHANGE: The modification in export logic might affect existing clients that depend on
the previous implementation.

Signed-off-by: Hamm <majhamm@qq.com>